Corrected the sticky navbar problem by removing the wrapper header element and  making the hero bg image position absoliute with z-index of -2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,18 +20,10 @@ body{
 a{
     color: inherit;
 }
-
 .container{
     width: 90%;
     margin: 0 auto;
 }
-
-header{
-    width: 100%;
-    /* min-height: 120vh; */
-    background: var(--blue);
-}
-
 .topnav .container, .nav .container{
     display: flex;
     justify-content: space-between;
@@ -40,58 +32,46 @@ header{
     color: white;
     font-family: 'Asap', sans-serif;
 }
-
 .topnav{
     border-bottom: 1px solid #ffffff68;
 }
 .contact-and-location, .social-media-icons{
     display: flex;
 }
-
 .contact-and-location li{
     padding-right: 1.5rem;
 }
 .social-media-icons li{
     padding-left: 1.5rem;
 }
-
 .contact-and-location li{
     margin-right: 1rem;
 }
-
 .contact-and-location i {
     margin-right: .5rem;
 }
-
-.nav{
+nav{
     position: sticky;
     top: 0;
-    z-index: 2;
-    /* border: 2px solid red; */
+    z-index: 1000;
 }
-
 .nav ul{
     display: flex;
     padding: 1rem 0;
 }
-
 .nav ul li {
     padding-left: 2.5rem;
     font-weight: 500;
 }
-
 #logo{
     font-weight: 800;
     font-size: 1.5rem;
 }
 .hero{
-    padding: 12rem 0;
-    background-color: var(--blue);
-    position: absolute;
-    top: 0;
-    z-index: -10;
+    padding: 2rem 0;
+    margin-bottom: 4.5rem;
 }
-.hero-content{
+.hero .content{
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -101,17 +81,23 @@ header{
     border-radius: 1rem;
     color: var(--blue);
 }
-
 .hero h1{
     font-weight: 400;
     font-size: 1.3rem;
 }
-
 .hero h2{
     font-weight: 700;
     font-size: 3.5rem;
     font-family: "Asap", sans-serif;
     line-height: 1.2;
+}
+.hero-bg-image{
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    background-color: var(--blue);
 }
 .hero-buttons{
     padding: 1rem 0;
@@ -146,12 +132,12 @@ header{
     background-color: var(--dark);
     color: var(--light);
     border: 1px solid var(--dark);
+    font-weight: 400;
 }
 .btn:hover::after{
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
 }
-
 .btn-yellow-fill{
     background: var(--yellow);
     color: var(--light);
@@ -166,7 +152,4 @@ header{
     border: 1px solid var(--blue);
     color: var(--blue);
     border: 1px solid var(--blue);
-}
-main{
-    margin-top: 80vh;
 }
